<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txtTotDistHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_distance"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtTotDist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0,00 km"
        android:textSize="50sp"
        android:gravity="center"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtAccuracyHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accuracy"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtAccuracy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accuracy_not_available"
        android:textSize="30sp"
        android:gravity="center"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnStop"
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:onClick="btnStopOnClick"
            android:text="@string/stop"
            android:layout_margin="15dip" />

    </LinearLayout>

</LinearLayout>