<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:local="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/BarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/vehicleId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vehicleId"
                android:maxLines="1"
                android:inputType="text"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp" />
            <EditText
                android:id="@+id/passengerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passengerName"
                android:maxLines="1"
                android:inputType="text"
                android:layout_marginBottom="10dp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radioGender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <RadioButton android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp" />
                <RadioButton android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

            <EditText
                android:id="@+id/passengerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passengerPhone"
                android:maxLines="1"
                android:inputType="phone"
                android:layout_marginBottom="10dp" />

            <Spinner
                android:id="@+id/reason_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnFinalize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="btnFinalizeOnClick"
                    android:text="@string/finalize"
                    android:layout_marginBottom="15dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>