<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eezer_small"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/accountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:maxLines="1"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/accountPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGrey" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:onClick="loginButtonOnClick"
            android:text="@string/login" />

        <TextView
            android:id="@+id/txtLoginErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="15sp"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorDarkGrey" />

    </LinearLayout>

</LinearLayout>